@@ -4,6 +4,7 @@
 #include "ruby/ruby.h"
 #include "ruby/io.h"
 #include "ruby/util.h"
+#include "internal.h"
 #include <stdio.h>
 #include <sys/types.h>
 #include <sys/stat.h>
